# Compare_Anti_9

./: .gitignore  Exact_files.py  LICENSE  __init__.py  mean_euclic.py  pick_ratio.py  pre_prompt.txt  pyproject.toml
.github/workflow/: workflow.yml
.github/workflows/: release.yml
hotblaz/: COMPARE_UTILS.py  __init__.py  calculate_vector_variance.py  config_adjust.json  convert_vector.py
src/hotblaz/: __init__.py  config.properties  get_database.py
