[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hotblaz"
version = "0.1.6"
description = "Hotblaz vector processing package"
long_description = file: README.md
long_description_content_type = "text/markdown"
requires-python = ">=3.8"
keywords = ["hotblaz", "vector", "nlp", "torch"]

authors = [
  { name="Mark_Leaou", email="mark.leaou@outlook.cn" }
]

dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.30.0",
]

