[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotblaz"
version = "0.1.9"
description = "Hotblaz vector processing package"
requires-python = ">=3.8"

authors = [
  { name="Mark_Leaou", email="mark.leaou@outlook.cn" }
]

dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.30.0",
]

